--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,37 @@
     <Compile Include="Assets\Script\UI\Core\UIFrame.cs" />
     <Compile Include="Assets\Script\Helper\MessgeBox.cs" />
     <Compile Include="Assets\Script\UI\Frame\UIFrameMainMenu.cs" />
+    <Compile Include="Assets\SPUM\Script\Ect\SpritePos.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_Button.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Worker.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_EyeSet.cs" />
+    <Compile Include="Assets\SPUM\SoonsoonData\SoonsoonData.cs" />
+    <Compile Include="Assets\SPUM\Sprite_Editor(Beta)\Script\SpriteSync.cs" />
+    <Compile Include="Assets\SPUM\Sprite_Editor(Beta)\Script\SpriteEyeSync.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_HorseSpriteList.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_PackageButton.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\ReflectionUtils.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_PreviewItem.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_Prefabs.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_SpriteButtonST.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Recorder.cs" />
+    <Compile Include="Assets\SPUM\Sample\Script\PlayerObj.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_Manager.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Gif\GifEncoder.cs" />
+    <Compile Include="Assets\SPUM\Sprite_Editor(Beta)\Script\SPUM_SpriteEditManager.cs" />
+    <Compile Include="Assets\SPUM\Script\Ect\ColorSelect.cs" />
+    <Compile Include="Assets\SPUM\Sample\Script\PlayerManager.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Gif\GifFrame.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_AnimationController.cs" />
+    <Compile Include="Assets\SPUM\Sprite_SheetExporter(Beta)\Script\SPUM_Exporter.cs" />
+    <Compile Include="Assets\SPUM\Script\SPUM_SpriteList.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Gif\LzwEncoder.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\MinAttribute.cs" />
+    <Compile Include="Assets\SPUM\Script\Plugin\Moments Recorder\Scripts\Gif\NeuQuant.cs" />
+    <Compile Include="Assets\SPUM\Sprite_Editor(Beta)\Script\SpriteSyncManager.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\SPUM\ReadMe - 1.6.2.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
